--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <option value="" disabled selected>Seleccione un municipio</option>
                     <option value="Ayapel">Ayapel</option>
                     <option value="Buenavista">Buenavista</option>
-                    <option value="Canalete">Canalete</option>
+                    <option value="Canaletes">Canalete</option>
                     <option value="Cerete">Cereté</option>
                     <option value="Chimá">Chimá</option>
                     <option value="Chinú">Chinú</option>
